--- a/backend/templates/master_b/_aside_second.html
+++ b/backend/templates/master_b/_aside_second.html
@@ -2,7 +2,7 @@
     <ul style="padding: 0;">
         <li class="adminItem" style="padding: 0;"><a href="{% url 'bxslider' %}">首页轮播图</a></li>
         <li class="adminItem" style="padding: 0;"><a href="{% url 'nav_index' %}">首页导航</a></li>
-        <li class="adminItem" style="padding: 0;"><a href="{% url 'product_recommendation' %}">首页产品推荐</a></li>
+{#        <li class="adminItem" style="padding: 0;"><a href="{% url 'product_recommendation' %}">首页产品推荐</a></li>#}
         <li class="adminItem" style="padding: 0;"><a href="">banner管理</a></li>
         <li class="adminItem" style="padding: 0;"><a href="">友情链接</a></li>
         <li class="adminItem" style="padding: 0;"><a href="">公司介绍</a></li>
