--- a/backend/templates/product/product_edit.html
+++ b/backend/templates/product/product_edit.html
@@ -61,6 +61,16 @@
                         </select>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="col-sm-2 pro_label">状态</label>
+                    <div class="col-sm-4 pro_input">
+                        {{ form.p_putaway }}
+                    </div>
+                    <label class="col-sm-2 pro_label">主页推荐</label>
+                    <div class="col-sm-4 pro_input">
+                        {{ form.p_top }}
+                    </div>
+                </div>
                 <div class="form-group" id="demo">
                     <label class="col-sm-2 pro_label">产品城市</label>
                     <div class="col-sm-4 pro_input">
