--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -59,7 +59,7 @@
                         </span>
                         <label style="left: -90px;">短信验证码</label>
                         <a id="user_getcode" for="register" class="reg-click" style="width:86px;">点击获取</a>
-                        <div class="register-li-2 tishi-div-2">请输入手机收到的短信验证码</div>
+{#                        <div class="register-li-2 tishi-div-2">请输入手机收到的短信验证码</div>#}
                         {% if form.errors.verify_code.0 %}
                             <div class="register-li-1 tishi-div-3">{{ form.errors.verify_code.0 }}</div>
                         {% endif %}
