--- a/app/static/css/buy.css
+++ b/app/static/css/buy.css
@@ -655,7 +655,7 @@ body {
     text-align: left;
 }
 .couponTitle i {
-    background: rgba(0, 0, 0, 0) url("../images/icon/Home_index/spreadIcon.png") no-repeat scroll 0 -17px;
+    background: rgba(0, 0, 0, 0) url("../images/icon/spreadIcon.png") no-repeat scroll 0 -17px;
     display: inline-block;
     height: 14px;
     margin: 0 10px 0 0;
